--- a/analysis/05_CommunityAnalysis.rmd
+++ b/analysis/05_CommunityAnalysis.rmd
@@ -439,7 +439,7 @@ Variance of Sorensen influenced by nitrogen level.
 # Set the phylum colors
 phylum_colors <- c(
   Acidobacteriota = "navy", 
-  Actinobacteria = "purple",
+  Actinobacteriota = "purple",
   Gemmatimonadota = "orange",
   Patescibacteria = "lightpink",
   Firmacutes = "darkslategray2", 
@@ -463,7 +463,7 @@ phylum_colors <- c(
   "SAR324 clade(Marine group B)" = "olivedrab",
   "WPS-2"= "greenyellow",
   Thermoplasmatota = "green",
-  Verrucomicrobiota = "darkorchid1")
+  Verrucomicrobiota = "darkred")
  # Other = "grey")
 ```
 
@@ -490,14 +490,14 @@ planted_phylum_subset <- subset(phylum_df,planted == "Planted")
 planted_phylum_subset %>%
   # Warning: It's important to have one sample per x value, 
   # otherwise, it will take the sum between multiple samples
-  ggplot(aes(x = n_level,growth_stage, y = Abundance, fill = Phylum)) + 
+  ggplot(aes(x = n_level, y = Abundance, fill = Phylum)) + 
   facet_grid(Phylum~growth_stage, scale = "free") + 
   geom_bar(stat = "identity", color = "black") + 
   labs(title = "Surface Phylum Composition") + 
   scale_fill_manual(values = phylum_colors) + 
   theme_bw() + 
   theme(axis.text.x = element_text(angle = 30, hjust = 1, vjust = 1),
-        strip.text.y = element_text(size = 5, angle = 90))
+        strip.text.y = element_text(size = 5))
 ```
 
 ```{r phylum-station-firmicutes, fig.width=5, fig.height=3.5}
